Fix bottom bar visibility

--- a/client/less/includes/base.less
+++ b/client/less/includes/base.less
@@ -107,7 +107,7 @@ p {
     user-select: none;
     table-layout: fixed;
 
-    &.hidden {
+    &.closed {
         bottom: -@bottomBarHeight;
     }
 
